syntax = "proto3";

package greeter;

import "google/protobuf/any.proto";

service Greeter {
	rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
	string name = 1;
	repeated google.protobuf.Any details = 2;
}

message Person {
	string first_name = 1;
	string last_name = 2;
}

message HelloReply {
	string response =1;
	google.protobuf.Any details = 2;
}

// message HealthCheckRequest {
// 	string service = 1;
//   }
  
//   message HealthCheckResponse {
// 	enum ServingStatus {
// 	  UNKNOWN = 0;
// 	  SERVING = 1;
// 	  NOT_SERVING = 2;
// 	}
// 	ServingStatus status = 1;
//   }
  
//   service Health {
// 	rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
//   }
  